BigProblem1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/cmis/jaejun1679-apcs-cmis/BigProblem1
-d
/home/cmis/jaejun1679-apcs-cmis/BigProblem1/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/cmis/jaejun1679-apcs-cmis/BigProblem1/Histogram.java
<---- end of javadoc command ---->
Loading source file /home/cmis/jaejun1679-apcs-cmis/BigProblem1/Histogram.java...
/home/cmis/jaejun1679-apcs-cmis/BigProblem1/Histogram.java:20: error: ']' expected
            System.out.print( numberrange [index );
                                                ^
1 error
